--- a/index.HTML
+++ b/index.HTML
@@ -4,7 +4,7 @@
      <head>
 <title> QUIZ PARA PROGRAMADORES.</title>
 <meta name = "description" content="quiz interativo para avaliar conhecimentos.">
-
+<link rel="stylesheet" href="style.css">
      </head>
      <body>
 <header>  
@@ -16,7 +16,7 @@
 <main>
     <section> 
         <h2>
-            sobre esse quiz
+            Sobre esse quiz:
         </h2>
         <p>
             <strong> Este quiz </strong> foi desenvolvido para testar seus conhecimentos em programação
@@ -177,6 +177,7 @@
 
    <label for="coments">Comentários:</label>
    <textarea name="Comentários" id="Comentários" rows="4"  cols="50" placeholder="Digite seus Comentários aqui"></textarea>
+   <button>envie seu feedback</button>
 
 </fieldset>
 
@@ -185,8 +186,8 @@
 </section>
 </main>
 <footer>
-<p>&copy;Quiz de programação. Todos os direitos reservados.</p>
-<p>Para conhecer outros quizes <a href="https://quiz.rocketseat.com.br/" target="_blank">Clique aqui para conhecer mais.</a> </p>
+<p class="paragrafo-footer">&copy;Quiz de programação. Todos os direitos reservados.</p>
+<p class="paragrafo-footer">Para conhecer outros quizes <a href="https://quiz.rocketseat.com.br/" target="_blank">Clique aqui para conhecer mais.</a> </p>
 
 </footer>
 
